[package]
name = "pinata"
version = "0.1.0"
authors = ["Marko Mikulicic <mmikulicic@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
pinata-sdk = "1.1.0"
tokio = { version = "1.18", features = ["macros", "rt-multi-thread", "net"] }
anyhow = "1"
structopt = "0.3"
